--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,11 @@
-# Laravel Railway Configuration
+[build]
+builder = "nixpacks"
+watchPatterns = ["/*.php", "/resources/**", "/routes/**"]
 
-php_version: 8.3
-build:
-  - composer install --no-dev --optimize-autoloader
-  - php artisan config:cache
-  - php artisan route:cache
-  - php artisan view:cache
-  - npm ci
-  - npm run build
+[deploy]
+startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
+
+[plugins]
+name = "phpmyadmin"
