--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,15 @@
-[build]
-builder = "nixpacks"
-watchPatterns = ["/*.php", "/resources/**", "/routes/**"]
+[phases.setup]
+nixPkgs = ["php8.2", "nodejs-18_x", "npm-8_x"]
 
-[deploy]
-startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+[phases.build]
+cmds = [
+  "composer install --no-dev --optimize-autoloader",
+  "php artisan config:cache",
+  "php artisan route:cache",
+  "php artisan view:cache",
+  "npm ci",
+  "npm run build"
+]
 
-[plugins]
-name = "phpmyadmin"
+[start]
+cmd = "php artisan serve --host=0.0.0.0 --port=${PORT}"
