--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,7 @@ cmds = [
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache",
+  "php artisan migrate --force",
   "npm ci",
   "npm run build"
 ]
