--- a/railway.toml
+++ b/railway.toml
@@ -8,6 +8,8 @@ cmds = [
   "php artisan route:cache",
   "php artisan view:cache",
   "php artisan migrate --force",
+  "php artisan storage:link",
+  "chmod -R 777 storage bootstrap/cache",
   "npm ci",
   "npm run build"
 ]
