--- a/railway.toml
+++ b/railway.toml
@@ -4,12 +4,16 @@ nixPkgs = ["php8.2", "nodejs-18_x", "npm-8_x"]
 [phases.build]
 cmds = [
   "composer install --no-dev --optimize-autoloader",
+  "chmod -R 777 storage bootstrap/cache public",
+  "php artisan storage:link || true",
+  "php artisan key:generate --force",
+  "php artisan config:clear",
+  "php artisan route:clear",
+  "php artisan view:clear",
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache",
   "php artisan migrate --force",
-  "php artisan storage:link",
-  "chmod -R 777 storage bootstrap/cache",
   "npm ci",
   "npm run build"
 ]
