--- a/railway.toml
+++ b/railway.toml
@@ -5,18 +5,19 @@ nixPkgs = ["php8.2", "nodejs-18_x", "npm-8_x"]
 cmds = [
   "composer install --no-dev --optimize-autoloader",
   "chmod -R 777 storage bootstrap/cache public",
-  "php artisan storage:link || true",
+  "mkdir -p storage/framework/sessions",
+  "chmod -R 777 storage/framework/sessions",
   "php artisan key:generate --force",
+  "php artisan storage:link || true",
   "php artisan config:clear",
-  "php artisan route:clear",
+  "php artisan cache:clear",
   "php artisan view:clear",
-  "php artisan config:cache",
-  "php artisan route:cache",
-  "php artisan view:cache",
-  "php artisan migrate --force",
+  "php artisan migrate:fresh --force --seed",
+  "php artisan optimize:clear",
+  "php artisan optimize",
   "npm ci",
   "npm run build"
 ]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=${PORT}"
+cmd = "php artisan serve --host=0.0.0.0 --port=${PORT} --no-reload"
