--- a/railway.toml
+++ b/railway.toml
@@ -5,19 +5,27 @@ nixPkgs = ["php8.2", "nodejs-18_x", "npm-8_x"]
 cmds = [
   "composer install --no-dev --optimize-autoloader",
   "chmod -R 777 storage bootstrap/cache public",
-  "mkdir -p storage/framework/sessions",
-  "chmod -R 777 storage/framework/sessions",
+  "mkdir -p storage/framework/sessions storage/framework/views storage/framework/cache",
+  "chmod -R 777 storage/framework",
   "php artisan key:generate --force",
-  "php artisan storage:link || true",
   "php artisan config:clear",
   "php artisan cache:clear",
   "php artisan view:clear",
-  "php artisan migrate:fresh --force --seed",
-  "php artisan optimize:clear",
-  "php artisan optimize",
+  "php artisan migrate:refresh --force",
+  "php artisan db:seed --force",
+  "php artisan storage:link || true",
   "npm ci",
-  "npm run build"
+  "npm run build",
+  "php artisan optimize"
+]
+
+[phases.deploy]
+cmds = [
+  "echo 'Running database migrations...'",
+  "php artisan migrate --force",
+  "echo 'Running database seeders...'",
+  "php artisan db:seed --force"
 ]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=${PORT} --no-reload"
+cmd = "php artisan serve --host=0.0.0.0 --port=${PORT}"
