--- a/railway.toml
+++ b/railway.toml
@@ -1,47 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "composer install --no-dev --optimize-autoloader && npm ci && npm run build"
 
 [deploy]
-startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
+startCommand = "sh ./start.sh"
 healthcheckPath = "/"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-[variables]
-PHP_VERSION = "8.2"
-NODE_VERSION = "18"
-NPM_VERSION = "8"
-
-[[deploy.lifecycle.preStart]]
-cmd = "echo 'Setting up storage...'"
-
-[[deploy.lifecycle.preStart]]
-cmd = "chmod -R 777 storage bootstrap/cache"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan storage:link || true"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan key:generate --force"
-
-[[deploy.lifecycle.preStart]]
-cmd = "echo 'Running migrations...'"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan migrate:fresh --force"
-
-[[deploy.lifecycle.preStart]]
-cmd = "echo 'Running seeders...'"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan db:seed --force"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan config:cache"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan route:cache"
-
-[[deploy.lifecycle.preStart]]
-cmd = "php artisan view:cache"
