--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,19 @@
 [build]
 builder = "nixpacks"
+buildCommand = """
+composer install --optimize-autoloader --no-dev
+npm install
+npm run build
+php artisan config:clear
+php artisan cache:clear
+php artisan migrate:fresh --force --seed
+"""
 
 [deploy]
-startCommand = "sh ./start.sh"
+startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
 healthcheckPath = "/"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[phases.setup]
+cmds = ["php artisan storage:link"]
