--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
+  "framework": null,
   "functions": {
-    "api/index.php": { "runtime": "vercel-php@0.6.2" }
+    "api/index.php": { 
+      "runtime": "vercel-php@0.6.2"
+    }
   },
   "routes": [
     {
@@ -17,11 +20,15 @@
       "dest": "/public/favicon.ico"
     },
     {
-      "src": "/(.*)",
+      "src": "/((?!api/).*)",
       "dest": "/api/index.php"
     }
   ],
   "outputDirectory": "public",
+  "builds": [
+    { "src": "api/index.php", "use": "@vercel/php" },
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
