Update Vercel configuration for Laravel compatibility

--- a/.env.production
+++ b/.env.production
@@ -1,19 +1,24 @@
 APP_NAME="RS Sehat"
 APP_ENV=production
 APP_KEY=base64:eiYKXXrGZZROm67ZGf9YYGPeYHJ9zlp2VilFObhzPRg=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://rs-sehat.vercel.app
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
+LOG_CHANNEL=stderr
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 DB_DATABASE=/tmp/database.sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
+
+VIEW_COMPILED_PATH=/tmp/views
+CACHE_PATH=/tmp/cache
+
+ASSET_URL=https://rs-sehat.vercel.app
