--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,19 @@
 .env
-.env.*
+.env.local
 .git
 .github
-storage/*.key
+/storage/*.key
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+/storage/logs/*
+/storage/app/*
+.editorconfig
+.gitattributes
+.gitignore
+.styleci.yml
+/docker
+/tests
+phpunit.xml
+README.md
+docker-compose.yml
