--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,24 @@
   "framework": null,
   "functions": {
     "api/index.php": { 
-      "runtime": "vercel-php@0.6.2"
+      "runtime": "vercel-php@0.6.2",
+      "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/build/assets/(.*)",
-      "dest": "/public/build/assets/$1"
+      "dest": "/public/build/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/build/(.*)",
-      "dest": "/public/build/$1"
+      "dest": "/public/build/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/favicon.ico",
@@ -26,9 +33,19 @@
   ],
   "outputDirectory": "public",
   "builds": [
-    { "src": "api/index.php", "use": "@vercel/php" },
-    { "src": "public/**", "use": "@vercel/static" }
+    { 
+      "src": "api/index.php",
+      "use": "@vercel/php",
+      "config": {
+        "composerInstall": true
+      }
+    },
+    { 
+      "src": "public/**", 
+      "use": "@vercel/static" 
+    }
   ],
+  "buildCommand": "php artisan config:cache && php artisan route:cache && php artisan view:cache && npm install && npm run build",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
