--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,6 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 DB_DATABASE=/tmp/database.sqlite
-DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
@@ -18,7 +17,5 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
-VIEW_COMPILED_PATH=/tmp/views
-CACHE_PATH=/tmp/cache
-
-ASSET_URL=https://rs-sehat.vercel.app
+VIEW_COMPILED_PATH=/tmp
+STORAGE_PATH=/tmp
