--- a/vercel.json
+++ b/vercel.json
@@ -1,51 +1,16 @@
 {
   "version": 2,
-  "framework": null,
   "functions": {
-    "api/index.php": { 
-      "runtime": "vercel-php@0.6.2",
-      "maxDuration": 30
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.2"
     }
   },
   "routes": [
-    {
-      "src": "/build/assets/(.*)",
-      "dest": "/public/build/assets/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/build/(.*)",
-      "dest": "/public/build/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/public/favicon.ico"
-    },
-    {
-      "src": "/((?!api/).*)",
-      "dest": "/api/index.php"
-    }
+    { "src": "/(css|js)/(.*)", "dest": "public/$1/$2" },
+    { "src": "/build/(.*)", "dest": "public/build/$1" },
+    { "src": "/favicon.ico", "dest": "public/favicon.ico" },
+    { "src": "/(.*)", "dest": "/api/index.php" }
   ],
-  "outputDirectory": "public",
-  "builds": [
-    { 
-      "src": "api/index.php",
-      "use": "@vercel/php",
-      "config": {
-        "composerInstall": true
-      }
-    },
-    { 
-      "src": "public/**", 
-      "use": "@vercel/static" 
-    }
-  ],
-  "buildCommand": "php artisan config:cache && php artisan route:cache && php artisan view:cache && npm install && npm run build",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
