--- a/.env.production
+++ b/.env.production
@@ -4,18 +4,26 @@ APP_KEY=base64:eiYKXXrGZZROm67ZGf9YYGPeYHJ9zlp2VilFObhzPRg=
 APP_DEBUG=true
 APP_URL=https://rs-sehat.vercel.app
 
-LOG_CHANNEL=stderr
+LOG_CHANNEL=errorlog
 LOG_LEVEL=debug
+
+CACHE_DRIVER=array
+SESSION_DRIVER=array
+SESSION_LIFETIME=120
+FILESYSTEM_DRIVER=local
 
 DB_CONNECTION=sqlite
 DB_DATABASE=/tmp/database.sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=array
-FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=array
-SESSION_LIFETIME=120
 
-VIEW_COMPILED_PATH=/tmp
-STORAGE_PATH=/tmp
+STORAGE_PATH=/tmp/storage
+VIEW_COMPILED_PATH=/tmp/storage/framework/views
+
+APP_CONFIG_CACHE=/tmp/storage/framework/cache/config.php
+APP_EVENTS_CACHE=/tmp/storage/framework/cache/events.php
+APP_PACKAGES_CACHE=/tmp/storage/framework/cache/packages.php
+APP_ROUTES_CACHE=/tmp/storage/framework/cache/routes-v7.php
+APP_SERVICES_CACHE=/tmp/storage/framework/cache/services.php
