--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,37 @@
 {
   "version": 2,
   "functions": {
-    "api/*.php": {
+    "api/index.php": {
       "runtime": "vercel-php@0.6.2"
     }
   },
   "routes": [
-    { "src": "/(css|js)/(.*)", "dest": "public/$1/$2" },
-    { "src": "/build/(.*)", "dest": "public/build/$1" },
-    { "src": "/favicon.ico", "dest": "public/favicon.ico" },
-    { "src": "/(.*)", "dest": "/api/index.php" }
+    {
+      "src": "/build/(.*)",
+      "dest": "/public/build/$1"
+    },
+    {
+      "src": "/(css|js)/(.*)",
+      "dest": "/public/$1/$2"
+    },
+    {
+      "src": "/favicon.(ico|png)",
+      "dest": "/public/favicon.$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.php"
+    }
+  ],
+  "builds": [
+    {
+      "src": "api/index.php",
+      "use": "@vercel/php"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
   ],
   "env": {
     "APP_ENV": "production",
