--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,16 @@
 {
   "version": 2,
+  "framework": "laravel",
   "functions": {
     "api/index.php": {
       "runtime": "vercel-php@0.6.2"
     }
   },
   "routes": [
-    {
-      "src": "/build/(.*)",
-      "dest": "/public/build/$1"
-    },
-    {
-      "src": "/(css|js)/(.*)",
-      "dest": "/public/$1/$2"
-    },
-    {
-      "src": "/favicon.(ico|png)",
-      "dest": "/public/favicon.$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
+    { "src": "/build/(.*)", "dest": "/public/build/$1" },
+    { "src": "/(css|js)/(.*)", "dest": "/public/$1/$2" },
+    { "src": "/favicon.ico", "dest": "/public/favicon.ico" },
+    { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "builds": [
     {
@@ -33,6 +22,7 @@
       "use": "@vercel/static"
     }
   ],
+  "buildCommand": "composer install --no-dev --optimize-autoloader && php artisan config:cache && php artisan route:cache && php artisan view:cache && npm install && npm run build",
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
